--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,52 +1,50 @@
 body {
   font-family: "Poppins", sans-serif;
-
 }
-:root{
-    --primary:#ff6c0b !important;
+:root {
+  --primary: #ff6c0b !important;
 }
 
 /* ==============================typography */
 
-.text-primary{
-    color: var(--primary) !important;
+.text-primary {
+  color: var(--primary) !important;
 }
-.main-heading{
-    color: #FFF;
-font-family: Poppins;
-font-size: 58px;
-font-style: normal;
-font-weight: 600;
-line-height: 110%; 
+.main-heading {
+  color: #fff;
+  font-family: Poppins;
+  font-size: 58px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 110%;
 }
-.main-text{
-    color: #E6E6E6;
-font-family: Poppins;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 32px; /* 177.778% */
+.main-text {
+  color: #e6e6e6;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px; /* 177.778% */
 }
-.heading{
-    color: #2C2C2C;
-text-align: center;
-font-family: Poppins;
-font-size: 36px;
-font-style: normal;
-font-weight: 600;
-line-height: 140%; /* 50.4px */
+.heading {
+  color: #2c2c2c;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 50.4px */
 }
-
 
 /* =================================header */
-.top-navbar-div{
-    padding-top: 18px;
-    padding-bottom: 18px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    transition: all .5s;
+.top-navbar-div {
+  padding-top: 18px;
+  padding-bottom: 18px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  transition: all 0.5s;
 }
 .top-navbar li {
   margin-left: 17px;
@@ -127,174 +125,178 @@ line-height: 140%; /* 50.4px */
   text-decoration: none;
   background-color: transparent;
   border-radius: 6px;
-  border: 1px solid #FF6C0B;
+  border: 1px solid #ff6c0b;
   white-space: nowrap;
 }
-.main-btn-blank:hover{
-    background-color: #FF6C0B;
-    color: white;
+.main-btn-blank:hover {
+  background-color: #ff6c0b;
+  color: white;
 }
-.main-btn{
-    display: flex;
-padding: 14px 30px;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-gap: 10px;
-border-radius: 6px;
-background: #FF6C0B;
-color: #FFF !important;
-text-align: right;
-font-family: Poppins;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 24px; /* 150% */
-text-decoration: none;
-border: 1px solid #FF6C0B;
-white-space: nowrap;
+.main-btn {
+  display: flex;
+  padding: 14px 30px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 6px;
+  background: #ff6c0b;
+  color: #fff !important;
+  text-align: right;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px; /* 150% */
+  text-decoration: none;
+  border: 1px solid #ff6c0b;
+  white-space: nowrap;
 }
-.main-btn2{
-    padding: 14px 30px !important; 
-    min-width: 190px;
+.main-btn2 {
+  padding: 14px 30px !important;
+  min-width: 190px;
 }
-.main-btn:hover{
-    background-color: transparent;
-    color: #FF6C0B !important;
+.main-btn:hover {
+  background-color: transparent;
+  color: #ff6c0b !important;
 }
-.main-btn-blank2{
-    display: flex;
-padding: 14px 30px;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-gap: 10px;
-border-radius: 6px;
-background: transparent;
-color: #FFF !important;
-text-align: right;
-font-family: Poppins;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 24px; /* 150% */
-text-decoration: none;
-border: 1px solid white;
-white-space: nowrap;
-min-width: 190px;
-height: 54px;
+.main-btn-blank2 {
+  display: flex;
+  padding: 14px 30px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 6px;
+  background: transparent;
+  color: #fff !important;
+  text-align: right;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px; /* 150% */
+  text-decoration: none;
+  border: 1px solid white;
+  white-space: nowrap;
+  min-width: 190px;
+  height: 54px;
 }
-.main-btn-blank2:hover{
-    background-color: white;
-    color: var(--primary) !important;
+.main-btn-blank2:hover {
+  background-color: white;
+  color: var(--primary) !important;
 }
 /* =====================================================================hero section */
-.hero-section{
-    background-image: url('../images/BG.png');
-    min-height: 100vh;
-    padding-top: 150px;
-    background-size: cover;
-    background-position: right;
-    padding-bottom: 70px;
+.hero-section {
+  background-image: url("../images/BG.png");
+  min-height: 100vh;
+  padding-top: 150px;
+  background-size: cover;
+  background-position: right;
+  padding-bottom: 70px;
 }
-.statistics{
-    position: relative;
- padding: 45px;
- border-radius: 6px;
-background: #FFF;
-box-shadow: 4px 10px 40px 0px rgba(163, 191, 185, 0.20);
-margin-top: -80px;  
-z-index: 10;
+.statistics {
+  position: relative;
+  padding: 45px;
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 4px 10px 40px 0px rgba(163, 191, 185, 0.2);
+  margin-top: -80px;
+  z-index: 10;
 }
-.statistics-card img{
-    width: 60px;
-height: 60px;
+.statistics-card img {
+  width: 60px;
+  height: 60px;
 }
-.statistics-card h1{
-    color: #2C2C2C;
-font-family: Cabin;
-font-size: 32px;
-font-style: normal;
-font-weight: 500;
-line-height: 36px; /* 112.5% */
-letter-spacing: 0.32px;
+.statistics-card h1 {
+  color: #2c2c2c;
+  font-family: Cabin;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 36px; /* 112.5% */
+  letter-spacing: 0.32px;
 }
-.statistics-card p{
-    color: rgba(44, 44, 44, 0.80);
-    font-family: Poppins;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 22px; /* 157.143% */
+.statistics-card p {
+  color: rgba(44, 44, 44, 0.8);
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 157.143% */
 }
 
 /* =========================================subject section */
-.subjects{
-    padding: 100px 0px;
+.subjects {
+  padding: 100px 0px;
 }
 .subject-card2,
-.subject-card{
-    display: flex;
-    align-items: center;
-    display: flex;
-padding: 20px;
-border-radius: 6px;
-border: 1px solid rgba(255, 108, 11, 0.20);
-background: #FFFCFA;
-cursor: pointer;
+.subject-card {
+  display: flex;
+  align-items: center;
+  display: flex;
+  padding: 20px;
+  border-radius: 6px;
+  border: 1px solid rgba(255, 108, 11, 0.2);
+  background: #fffcfa;
+  cursor: pointer;
 }
-.subject-card:hover{
-    background: var(--Primary, #FF6C0B);
-    box-shadow: 15px 15px 30px 0px rgba(0, 0, 0, 0.15);
+.subject-card:hover {
+  background: var(--Primary, #ff6c0b);
+  box-shadow: 15px 15px 30px 0px rgba(0, 0, 0, 0.15);
 }
 
 .subject-card2 h3,
-.subject-card h3{
-    color: #2C2C2C;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Poppins;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 30px; /* 125% */
-line-height: 30px; /* 125% */
+.subject-card h3 {
+  color: #2c2c2c;
+  font-feature-settings: "clig" off, "liga" off;
+  font-family: Poppins;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 30px; /* 125% */
+  line-height: 30px; /* 125% */
 }
 .subject-card2 p,
-.subject-card p{
-    color: rgba(44, 44, 44, 0.80);
-    font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+.subject-card p {
+  color: rgba(44, 44, 44, 0.8);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 .subject-card2 svg,
-.subject-card svg{
-    border-radius: 60px;
-    background: linear-gradient(46deg, rgba(255, 108, 11, 0.10) 19.69%, rgba(255, 220, 197, 0.10) 92.63%);
-    box-shadow: 0px 20px 80px 0px rgba(51, 78, 123, 0.30);
+.subject-card svg {
+  border-radius: 60px;
+  background: linear-gradient(
+    46deg,
+    rgba(255, 108, 11, 0.1) 19.69%,
+    rgba(255, 220, 197, 0.1) 92.63%
+  );
+  box-shadow: 0px 20px 80px 0px rgba(51, 78, 123, 0.3);
 }
 .subject-card2 svg path,
-.subject-card svg path{
-    fill: #FF6C0B !important;
+.subject-card svg path {
+  fill: #ff6c0b !important;
 }
-.subject-card:hover svg path{
-    fill:white !important;
+.subject-card:hover svg path {
+  fill: white !important;
 }
 .subject-card:hover h3,
-.subject-card:hover p{
-   color: white !important;
+.subject-card:hover p {
+  color: white !important;
 }
-.active-subject{
-    background: var(--Primary, #FF6C0B);
-    box-shadow: 15px 15px 30px 0px rgba(0, 0, 0, 0.15);
+.active-subject {
+  background: var(--Primary, #ff6c0b);
+  box-shadow: 15px 15px 30px 0px rgba(0, 0, 0, 0.15);
 }
-.active-subject svg path{
-    fill:white !important;
+.active-subject svg path {
+  fill: white !important;
 }
 .active-subject h3,
-.active-subject p{
-   color: white !important;
+.active-subject p {
+  color: white !important;
 }
 /* .text-18{
     color: rgba(44, 44, 44, 0.80);
@@ -305,26 +307,26 @@ font-weight: 400;
 line-height: 32px; 
 } */
 .subject-detail-card {
-    border-radius: 6px;
-background: #FFF;
-box-shadow: 0px 10px 40px 0px rgba(51, 78, 123, 0.15);
-display: flex;
-width: 370px;
-padding: 16px;
-flex-direction: column;
-align-items: flex-start;
-gap: 24px;
-flex-shrink: 0;
-width: 100%;
+  border-radius: 6px;
+  background: #fff;
+  box-shadow: 0px 10px 40px 0px rgba(51, 78, 123, 0.15);
+  display: flex;
+  width: 370px;
+  padding: 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+  flex-shrink: 0;
+  width: 100%;
 }
-.subject-detail-card img{
-    width: 100%;
+.subject-detail-card img {
+  width: 100%;
 }
-.subject-detail-card p{
-    color: #61646A;
-font-family: Poppins;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 24px; /* 171.429% */
+.subject-detail-card p {
+  color: #61646a;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 171.429% */
 }
