--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -26,9 +26,14 @@
 @media only screen and (max-width: 1200px){
     .main-btn-blank {
         padding: 10px 20px;
+        font-size: 14px;
       }
       .main-btn{
       padding: 10px 25px;
+      font-size: 14px;
+      }
+      .main-btn-blank2{
+        font-size: 14px;
       }
       .top-navbar li {
         margin-left: 10px;
@@ -44,9 +49,84 @@
     .statistics{
      padding:30px;
     }
+    .heading{
+      font-size: 30px;
+    }
+    .comfort-card {
+        padding: 15px;
+    }
+    .comfort-card h3{
+      font-size: 22px;
+      }
+      
+      .comfort-card p{
+      font-size: 14px;
+      }
+      .heading  br{
+        display: none;
+      }
 }
+@media only screen and (max-width:991px){
+  .work-card{
+    flex-direction: column;
+    padding: 0px 0px;
+  }
+}
+@media only screen and (max-width:768px){
 
+  .work-card img{
+    width: 100%;
+  }
+  .work-text{
+    padding: 20px;
+  }
+}
 @media only screen and (max-width:600px){
+  .testimonials,
+  .tutors,
+  .work,
+  .comfort-zone,
+  .subjects{
+      padding: 70px 0px;
+  }
+  .work-text{
+    padding: 15px;
+  }
+  .work-card h3{
+  font-size: 24px;
+  text-align: center;
+  }
+  
+  .work-card p{
+    font-size: 14px;
+    text-align: justify;
+  }
+  
+    .main-btn,
+    .main-btn2,
+    .main-btn-blank,
+    .main-btn-blank2{
+        width: 100%;
+    }
+   
+    .statistics-card img{
+        height: 45px;
+        width: 45px;
+    }
+    .statistics-card h3{
+     font-size: 18px;
+        line-height: 24px; /* 112.5% */
+      }
+    .subject-card{
+        padding: 15px !important;
+    }
+    .subject-card2 h3, .subject-card h3{
+        font-size: 18px;
+        line-height: 20px;
+    }
+    .comfort-card h3{
+        font-size: 20px;
+    }
     .main-heading{
         font-size: 30px;
     }
@@ -56,6 +136,7 @@
     .main-btn-blank2{
         min-width: 100px;
      }
+     .main-text2,
      .main-text{
         font-size: 14px;
         line-height:normal;
@@ -63,4 +144,7 @@
      .statistics{
         padding:15px;
        }
+       .heading{
+        font-size: 25px;
+      }
 }
