--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -747,7 +747,7 @@ line-height: 30px; /* 125% */
 /* ================================================================================footer */
 .footer{
    background: #FFF9F5;
-   padding: 30px 0px;
+   padding: 30px 0 0 0px;
 }
 .footer h2{
   color: #2C2C2C;
