--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -51,7 +51,7 @@
   }
 
   .hero-section {
-    min-height: 100vh;
+    /* min-height: 100vh; */
     padding-top: 70px;
   }
 
@@ -86,6 +86,9 @@
   /* .carousel-control-prev  {
         width: 43vw;
       } */
+      .header-form {
+        padding: 20px 15px;
+      }
 }
 
 @media only screen and (max-width:991px) {
@@ -105,6 +108,9 @@
 
   .work-text {
     padding: 20px;
+  }
+  .header-form {
+    padding: 20px 20px;
   }
 }
 
