--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -79,15 +79,26 @@
     display: none;
   }
 
-  .navbar-collapse {
-    background-color: rgba(55, 31, 85, 0.896) !important;
+  .navbar-collapse-light {
+    background-color: #FFFAF6 !important;
   }
-
+  .top-navbar-light li a{
+    color: white !important;
+  }
+  .header-select-dark {
+    color: white !important;
+  }
+  .header-select-dark {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="18" height="10" viewBox="0 0 18 10" fill="none"><path d="M17 1L9 9L1 1" stroke="white" stroke-opacity="0.8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>') !important;
+  }
+  
   /* .carousel-control-prev  {
         width: 43vw;
       } */
+    
       .header-form {
         padding: 20px 15px;
+        /* color: transparent; */
       }
 }
 
