--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,9 @@ body {
   padding-right: 5px !important;
   white-space: nowrap;
 }
-
+/* .top-navbar-light li a{
+  color: #2C2C2C !important;
+} */
 .top-navbar li a:hover {
   color: #ff6c0b !important;
 }
@@ -117,13 +119,15 @@ body {
 .top-navbar li .active-nav {
   color: #ff6c0b !important;
 }
-
+.header-select-dark,
 .header-select {
   width: fit-content !important;
   background-color: transparent;
   border: none;
+  color: rgba(44, 44, 44, 0.80);
 }
-
+.header-select-dark:active,
+.header-select-dark:focus,
 .header-select:active,
 .header-select:focus {
   outline: none !important;
@@ -134,6 +138,14 @@ body {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="18" height="10" viewBox="0 0 18 10" fill="none"><path d="M17 1L9 9L1 1" stroke="white" stroke-opacity="0.8" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>') !important;
 }
 
+.top-navbar-div-bg{
+  background-color: rgba(55, 31, 85, 0.896) !important;
+}
+.navbar-toggler:active,
+.navbar-toggler:focus{
+  outline: none !important;
+  box-shadow: none !important;
+}
 /* ================================================buttons */
 .main-btn-blank {
   display: flex;
@@ -935,4 +947,29 @@ font-size: 16px;
 font-style: normal;
 font-weight: 500;
 line-height: 32px; /* 200% */
+}
+
+
+
+/* -------------------------------------------------------------------------Profile */
+/* ------------------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------------------- */
+/* ---------------------------------------------------------------------------------------------- */
+/* =====================================================================hero section */
+.hero-section-profile-bg{
+  background: linear-gradient(180deg, #FFF9F5 0%, rgba(255, 249, 245, 0.00) 100%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 500px;
+}
+.hero-section-profile {
+  /* min-height: 100vh; */
+  padding-top: 150px;
+  background-size: cover;
+  background-position: right;
+  padding-bottom: 70px;
+  background: linear-gradient(180deg, #FFF9F5 0%, rgba(255, 249, 245, 0.00) 100%);
+  position: relative;
 }
